Bố cục file và giao diện trang HomePage
Phân bố lại bố cục file của dự án và trang trí giao diện của trang HomePage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ev-data-marketplace",
+  "name": "ev-co-ownership-cost-sharing-system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
