update quy trình đăng ký, thiết lập quy tắc đăng nhập quy

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=EVCoOwnership
 # --- DataSource
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=EVCoOwnership;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=Closer223+
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # --- JPA/Hibernate
@@ -17,3 +17,6 @@ server.error.include-binding-errors=always
 server.error.include-stacktrace=always
 logging.level.org.springframework=DEBUG
 logging.level.swp302.topic6.evcoownership=DEBUG
+
+# Swagger UI path:
+springdoc.swagger-ui.path=/swagger-ui.html
